--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
 
 python: "3.6"
-cache: pip
 env:
-  - TESTSUITE=test_process.py
-  - TESTSUITE=test_process.py
+  - TESTFOLDER test_preprocess.py
+  _ TESTFOLDER test_preprocess.py
+cache: pip
 install: "pip install -r requirements.txt"
-script: "bundle exec rake test:$TEST_SUITE"
+script: pytest $TESTFOLDER
 
 notifications:
   email:
