revert to sequential build

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,10 @@ language: python
 
 python: "3.6"
 cache: pip
-env:
-  - TESTFOLDER=test_preprocess.py
-  _ TESTFOLDER=test_preprocess.py
 install: "pip install -r requirements.txt"
-script: "$TESTFOLDER"
+script: 
+  - python test_preprocess.py
+  - python test_pretrain_VAE.py
 
 notifications:
   email:
